--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.4.3 - Top leaders UI improvements - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v6.4.4 - Multiple UI improvements - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -431,30 +431,42 @@
         }
 
         .stat-item-compact {
-            background: rgba(0,0,0,0.3);
-            border-radius: 10px;
-            padding: 8px;
+            background: linear-gradient(135deg, rgba(0,0,0,0.4), rgba(15,23,42,0.3));
+            border-radius: 12px;
+            padding: 10px;
             text-align: center;
-            border: 1px solid rgba(102, 126, 234, 0.3);
+            border: 2px solid rgba(102, 126, 234, 0.4);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3), inset 0 0 20px rgba(102,126,234,0.1);
+            transition: all 0.3s;
+        }
+        
+        .stat-item-compact:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 15px rgba(0,0,0,0.4), inset 0 0 25px rgba(102,126,234,0.15);
+            border-color: rgba(102, 126, 234, 0.6);
         }
 
         .stat-main-value {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: 900;
             color: #fff;
-            margin-bottom: 2px;
+            margin-bottom: 4px;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+            letter-spacing: 0.5px;
         }
 
         .stat-passive-value {
-            font-size: 10px;
+            font-size: 11px;
             color: #4ade80;
-            margin-bottom: 6px;
-            font-weight: 600;
+            margin-bottom: 4px;
+            font-weight: 700;
+            text-shadow: 0 0 8px rgba(74,222,128,0.6);
         }
 
         .stat-label-small {
-            font-size: 12px;
+            font-size: 11px;
             color: #94a3b8;
+            font-weight: 600;
         }
 
         .energy-bar-container {
@@ -2195,7 +2207,7 @@
                         </div>
                         <div style="display:flex;justify-content:space-between;align-items:center;margin-top:10px;">
                             <div style="font-size:13px;color:rgba(255,255,255,0.8);">🔄 Автообновление</div>
-                            <button id="tournamentBtn" onclick="openTournamentModal();" style="margin-right:50px;padding:8px 16px;background:rgba(16,185,129,0.3);color:#10b981;border:2px solid rgba(16,185,129,0.5);border-radius:10px;cursor:pointer;font-weight:700;font-size:12px;transition:all 0.3s;" onmouseover="this.style.background='rgba(16,185,129,0.4)';this.style.transform='scale(1.05)'" onmouseout="this.style.background='rgba(16,185,129,0.3)';this.style.transform='scale(1)'">🏆 Турнир</button>
+                            <button id="tournamentBtn" onclick="openTournamentModal();" style="margin-right:50px;padding:10px 20px;background:linear-gradient(135deg,rgba(16,185,129,0.4),rgba(5,150,105,0.4));color:#fff;border:2px solid rgba(16,185,129,0.6);border-radius:12px;cursor:pointer;font-weight:800;font-size:14px;transition:all 0.3s;box-shadow:0 4px 12px rgba(16,185,129,0.3);" onmouseover="this.style.background='linear-gradient(135deg,rgba(16,185,129,0.6),rgba(5,150,105,0.6))';this.style.transform='scale(1.05)';this.style.boxShadow='0 6px 16px rgba(16,185,129,0.5)'" onmouseout="this.style.background='linear-gradient(135deg,rgba(16,185,129,0.4),rgba(5,150,105,0.4))';this.style.transform='scale(1)';this.style.boxShadow='0 4px 12px rgba(16,185,129,0.3)'">🏆 Турнир</button>
                         </div>
                     </div>
                     
@@ -2279,7 +2291,7 @@
                 <div class="modal-content" style="max-width: 500px; max-height: 90vh; overflow-y: auto;background: linear-gradient(135deg, rgba(10, 14, 39, 0.98), rgba(15, 23, 42, 0.98));border-radius: 20px;border: 2px solid rgba(16,185,129,0.4);">
                     <div style="background:linear-gradient(135deg,#10b981,#059669);padding:20px;border-radius:18px 18px 0 0;text-align:center;position:relative;">
                         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
-                            <h2 style="font-size: 24px; color: #fff; margin: 0; font-weight: 900;">🏆 Недельный Турнир ТОП-20</h2>
+                            <h2 style="font-size: 20px; color: #fff; margin: 0; font-weight: 900;">🏆 Турнир ТОП-20</h2>
                             <button class="close-btn" onclick="this.closest('.modal').remove(); if(window.tournamentModalInterval) clearInterval(window.tournamentModalInterval);">✕</button>
                         </div>
                         <div style="font-size:14px;color:rgba(255,255,255,0.9);margin-top:10px;">
@@ -2394,7 +2406,7 @@
             modal.style.zIndex = '10000';
             modal.innerHTML = `
                 <div class="modal-content" style="max-width: 420px; max-height: 90vh; overflow-y: auto;background: linear-gradient(135deg, rgba(10, 14, 39, 0.98), rgba(15, 23, 42, 0.98));border-radius: 24px;border: 2px solid rgba(255,215,0,0.4);box-shadow: 0 10px 40px rgba(255,215,0,0.3);">
-                    <div style="background:linear-gradient(135deg,#ffd700,#ffed4e);padding:24px;border-radius:22px 22px 0 0;text-align:center;">
+                    <div style="background:linear-gradient(135deg,#ffd700,#ffed4e);padding:24px;border-radius:22px 22px 0 0;text-align:center;position:relative;">
                         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
                             <h2 style="font-size: 26px; color: #000; margin: 0; font-weight: 900;">👑 VIP СТАТУСЫ</h2>
                             <button class="close-btn" onclick="this.closest('.modal').remove()">✕</button>
