--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.4.7 - Username validation and buy button rename - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v6.4.8 - Username validation with Buy VIP button restored - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -1773,7 +1773,7 @@
                                 </div>
                             </div>
                             ` : `
-                            <button onclick="openBuyVIPModal(); this.closest('.modal').remove();" style="width:100%;padding:14px;background:linear-gradient(135deg,#ffd700,#ffed4e);color:#000;border:none;border-radius:12px;cursor:pointer;font-weight:800;font-size:15px;margin-bottom:15px;box-shadow:0 4px 15px rgba(255,215,0,0.5);">🛍️ Мои покупки</button>
+                            <button onclick="openBuyVIPModal(); this.closest('.modal').remove();" style="width:100%;padding:14px;background:linear-gradient(135deg,#ffd700,#ffed4e);color:#000;border:none;border-radius:12px;cursor:pointer;font-weight:800;font-size:15px;margin-bottom:15px;box-shadow:0 4px 15px rgba(255,215,0,0.5);">👑 Купить VIP</button>
                             `}
                             
                             <div style="background:rgba(0,0,0,0.2);padding:15px;border-radius:12px;margin-bottom:15px;border:1px solid rgba(255,255,255,0.2);">
