--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.4.8 - Username validation with Buy VIP button restored - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v6.4.9 - Profile purchases button renamed to "Мои покупки" - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -1811,7 +1811,7 @@
                             <div style="display:grid;grid-template-columns:repeat(2,1fr);gap:10px;margin-bottom:15px;">
                                 <!-- My Purchases Button -->
                                 <div id="myPurchasesBtn" style="cursor:pointer;padding:14px;background:linear-gradient(135deg,#10b981,#059669);border-radius:12px;text-align:center;font-weight:800;font-size:13px;color:#fff;transition:all 0.3s;box-shadow:0 4px 12px rgba(16,185,129,0.3);" onmouseover="this.style.transform='scale(1.05)';this.style.boxShadow='0 6px 16px rgba(16,185,129,0.4)'" onmouseout="this.style.transform='scale(1)';this.style.boxShadow='0 4px 12px rgba(16,185,129,0.3)'">
-                                    🛍️ Покупки
+                                    🛍️ Мои покупки
                                 </div>
                                 
                                 <!-- Achievements Button -->
@@ -3851,7 +3851,7 @@
                                     onmousedown="if(!${isLocked}){this.style.transform='scale(0.98)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 12px rgba(255,215,0,0.4)' : '0 3px 8px rgba(102,126,234,0.4)'}'}"
                                     onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}"
                                     onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}">
-                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.basePrice || item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${item.price.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
+                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Мои покупки за ${item.basePrice || item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Мои покупки за ${item.price.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
                             </button>
                         ` : `
                             <button onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${currentLevel}, ${item.basePrice || item.price})` : `buyShopItem('${category}', ${currentLevel}, ${nextLevelPrice}, ${index})`}" 
