FINAL: Shop icon 100px 1.7x scale + version marker v7.0.0 - Shop icon: 100px with 1.7x scale = 170px visible - Added unique IDs: shop-button-v7, shop-icon-v7, shop-text-v7 - Version marker in HTML comment for verification - Enhanced gold effects and animations

--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.5.2 - Unified VIP buttons, improved shop icon, sound permission modal - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v7.0.0 - SHOP ICON 90px GOLD + SIMPLIFIED AUDIO - BUILD: 2024-12-29-ULTRA-VISIBLE -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
