Replace remaining innerHTML with textContent for autobot buttons

--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -2871,7 +2871,8 @@
                         btn.style.cursor = 'pointer';
                         // Use cached price to prevent blinking
                         const price = window.autobotPricesCache[i] || window.shopData?.autobot?.items?.[i-1]?.price || 0;
-                        btn.innerHTML = `Купить ${price.toLocaleString()} 🪙`;
+                        btn.textContent = `Купить ${price.toLocaleString()} 🪙`;
+                        btn.dataset.lockedSet = ''; // Clear lock flag to allow future updates
                     }
                 }
             }
