--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.6.1 - Shop icon 💰, ultra-soft cosmic sounds optimized for mobile - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v6.7.1 - HTML5 Audio исправлен: звук включен по умолчанию, улучшена инициализация - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
