--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.4 - Enhanced sounds: богатые гармоники, аккорды, вариации частот, музыкальные последовательности - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v6.7.5 - Иконка кнопки магазина изменена на 🛒 (как в модальном окне) - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -1418,7 +1418,7 @@
         </button>
         <div class="buttons">
             <a href="#" class="btn" onclick="openShop(event)">
-                <div class="btn-emoji">💰</div>
+                <div class="btn-emoji">🛒</div>
                 <div>Магазин</div>
             </a>
             <a href="#" class="btn" onclick="openMining(event)">
