--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.12 - Исправлены кнопки автоботов: после покупки не пересоздаются, при активном - только "недоступно" или таймер - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v6.7.13 - КРИТИЧЕСКОЕ ИСПРАВЛЕНИЕ: loadShopCategory не пересоздает кнопки автоботов - только обновление состояния - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
