--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.15 - Редизайн модального окна покупки валюты в VIP стиле, как в категориях магазина - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v6.7.16 - Улучшенная сетка кнопок: 2 колонки, адаптация для Telegram мобильных, все по центру и стильно - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -616,8 +616,6 @@
 
         .btn:hover .btn-emoji {
             transform: scale(1.1);
-        }
-            filter: drop-shadow(0 0 10px rgba(102, 126, 234, 0.3));
         }
 
         .tap-button {
