--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.17 - Карточки покупки валюты теперь с улучшенной анимацией shimmer как в VIP майнинге, увеличенные emoji, улучшенные тени и эффекты наведения - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v6.7.18 - Карточки магазина и покупки валюты теперь с улучшенной анимацией shimmer, увеличенными emoji (24px), улучшенными тенями, эффектами наведения и кнопками как в VIP майнинге - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -4489,20 +4489,23 @@
                 // Use calculated price and bonus for next level
                 
                 return `
-                    <div style="background:${isLocked ? 'rgba(0,0,0,0.5)' : item.premium ? 'linear-gradient(135deg,rgba(255,215,0,0.15),rgba(255,237,78,0.15))' : rarityColor};padding:14px;border-radius:14px;border:2px solid ${isLocked ? 'rgba(239,68,68,0.5)' : item.premium ? 'rgba(255,215,0,0.6)' : 'rgba(102,126,234,0.4)'};position:relative;${isLocked ? 'opacity:0.6;' : ''}">
+                    <div style="background:${isLocked ? 'rgba(0,0,0,0.5)' : item.premium ? 'linear-gradient(135deg,rgba(255,215,0,0.12),rgba(255,237,78,0.18))' : rarityColor};padding:16px;border-radius:16px;border:${isLocked ? '2px solid rgba(239,68,68,0.5)' : item.premium ? '1px solid rgba(255,215,0,0.3)' : '1px solid rgba(102,126,234,0.3)'};position:relative;backdrop-filter:blur(8px);box-shadow:0 6px 20px ${isLocked ? 'rgba(239,68,68,0.15)' : item.premium ? 'rgba(255,215,0,0.15)' : 'rgba(102,126,234,0.15)'};transition:all 0.3s ease;overflow:hidden;background-size:200% 200%;${isLocked ? 'opacity:0.6;' : item.premium ? 'animation:shimmer 3s ease-in-out infinite;' : ''}" onmouseover="${!isLocked ? `this.style.transform='translateY(-3px) scale(1.02)';this.style.boxShadow='0 10px 30px ${item.premium ? 'rgba(255,215,0,0.25)' : 'rgba(102,126,234,0.25)'}'` : ''}" onmouseout="${!isLocked ? `this.style.transform='translateY(0) scale(1)';this.style.boxShadow='0 6px 20px ${item.premium ? 'rgba(255,215,0,0.15)' : 'rgba(102,126,234,0.15)'}'` : ''}">
                         ${isLocked ? `
                             <div style="position:absolute;top:8px;right:8px;background:rgba(239,68,68,0.8);color:#fff;padding:4px 8px;border-radius:6px;font-size:10px;font-weight:700;">🔒</div>
                         ` : item.premium ? `
-                            <div style="position:absolute;top:8px;right:8px;background:linear-gradient(135deg,#ffd700,#ffed4e);color:#000;padding:4px 8px;border-radius:6px;font-size:10px;font-weight:700;box-shadow:0 2px 8px rgba(255,215,0,0.4);">⭐ VIP</div>
+                            <div style="position:absolute;top:8px;right:8px;background:linear-gradient(135deg,#ffd700,#ffed4e,#ffd700);color:#000;padding:4px 8px;border-radius:8px;font-size:11px;font-weight:900;text-shadow:0 1px 3px rgba(0,0,0,0.3);border:1px solid #ffd700;box-shadow:0 3px 8px rgba(255,215,0,0.4);position:relative;overflow:hidden;">
+                                <div style="position:absolute;top:0;left:-100%;width:100%;height:100%;background:linear-gradient(90deg,transparent,rgba(255,255,255,0.4),transparent);animation:shimmer 2s infinite;"></div>
+                                <span style="font-size:12px;font-weight:900;text-shadow:0 1px 2px rgba(0,0,0,0.4);">⭐ VIP</span>
+                            </div>
                         ` : ''}
                         <div style="display:flex;align-items:center;gap:10px;margin-bottom:8px;">
-                            <span style="font-size:20px;">${item.name.split(' ')[0]}</span>
+                            <span style="font-size:24px;filter:drop-shadow(0 0 4px ${item.premium ? 'rgba(255,215,0,0.6)' : 'rgba(102,126,234,0.6)'});">${item.name.split(' ')[0]}</span>
                             <div style="flex:1;">
                                 <div style="display:flex;align-items:center;gap:8px;margin-bottom:2px;">
-                                    <div style="font-weight:800;font-size:14px;color:#fff;">${item.name.split(' ').slice(1).join(' ')} #${index + 1}</div>
+                                    <div style="font-weight:900;font-size:14px;color:#fff;text-shadow:0 2px 4px rgba(0,0,0,0.5);">${item.name.split(' ').slice(1).join(' ')} #${index + 1}</div>
                                     <div style="background:linear-gradient(135deg,rgba(102,126,234,0.8),rgba(139,92,246,0.8));color:#fff;padding:2px 6px;border-radius:6px;font-size:10px;font-weight:700;box-shadow:0 2px 4px rgba(102,126,234,0.3);">Ур.${currentLevel}</div>
                                 </div>
-                                <div style="font-size:11px;color:#94a3b8;">${item.desc}</div>
+                                <div style="font-size:11px;color:rgba(255,255,255,0.7);font-weight:600;">${item.desc}</div>
                             </div>
                         </div>
                         ${category === 'tap_boost' ? `
@@ -4597,11 +4600,11 @@
                             })()}
                         ` : `
                             <button onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${currentLevel}, ${item.basePrice || item.price})` : `buyShopItem('${category}', ${currentLevel}, ${nextLevelPrice}, ${index})`}" 
-                                    style="width:100%;padding:8px 12px;background:${isLocked ? 'rgba(239,68,68,0.6)' : item.currency === 'stars' ? 'linear-gradient(135deg,#ffd700,#ffed4e,#ffd700)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:${item.currency === 'stars' ? '#000' : '#fff'};border:${item.currency === 'stars' ? '1px solid #ffd700' : 'none'};border-radius:10px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:700;font-size:12px;transition:all 0.3s;position:relative;overflow:hidden;box-shadow:${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'};display:flex;align-items:center;justify-content:center;gap:4px;"
-                                    onmousedown="if(!${isLocked}){this.style.transform='scale(0.98)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 12px rgba(255,215,0,0.4)' : '0 3px 8px rgba(102,126,234,0.4)'}'}"
-                                    onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}"
-                                    onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}">
-                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.basePrice || item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${nextLevelPrice.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
+                                    style="width:100%;padding:12px;background:${isLocked ? 'rgba(239,68,68,0.6)' : item.currency === 'stars' ? 'linear-gradient(135deg,#ffd700,#ffed4e,#ffd700)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:${item.currency === 'stars' ? '#000' : '#fff'};border:${item.currency === 'stars' ? '1px solid #ffd700' : 'none'};border-radius:10px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:900;font-size:13px;transition:all 0.3s;position:relative;overflow:hidden;box-shadow:${item.currency === 'stars' ? '0 4px 15px rgba(255,215,0,0.3)' : '0 4px 15px rgba(102,126,234,0.3)'};text-shadow:${item.currency === 'stars' ? '0 1px 2px rgba(0,0,0,0.2)' : '0 1px 2px rgba(0,0,0,0.3)'};display:flex;align-items:center;justify-content:center;gap:6px;"
+                                    onmousedown="if(!${isLocked}){this.style.transform='scale(0.96)';this.style.boxShadow='${item.currency === 'stars' ? '0 6px 16px rgba(255,215,0,0.4)' : '0 6px 16px rgba(102,126,234,0.4)'}'}"
+                                    onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 15px rgba(255,215,0,0.3)' : '0 4px 15px rgba(102,126,234,0.3)'}'}"
+                                    onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 15px rgba(255,215,0,0.3)' : '0 4px 15px rgba(102,126,234,0.3)'}'}">
+                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.basePrice || item.price}</span><span style="font-size:18px;filter:drop-shadow(0 0 3px rgba(255,215,0,0.8));text-shadow:0 1px 2px rgba(0,0,0,0.3);">⭐</span><span>Stars</span>` : `<span>Купить за ${nextLevelPrice.toLocaleString()}</span><span style="font-size:18px;">🪙</span>`}
                             </button>
                         `}
                     </div>
