--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.22 - Buy Currency modal redesigned to match VIP Mining store style - Header, category buttons and cards all updated to VIP style -->
+<!-- Quantum Nexus v6.7.23 - Buy Currency modal: first card updated to VIP Mining style - Task: update remaining cards to VIP style -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
